--- a/packages/pluggableWidgets/markdown-web/package.json
+++ b/packages/pluggableWidgets/markdown-web/package.json
@@ -16,6 +16,7 @@
         "type": "widget",
         "mpkName": "com.mendix.widget.web.Markdown.mpk"
     },
+    "packagePath": "com.mendix.widget.web",
     "marketplace": {
         "minimumMXVersion": "9.24.0",
         "appNumber": 230248,
@@ -26,26 +27,28 @@
         "githubUrl": "https://github.com/mendix/testProjects",
         "branchName": "markdown-web"
     },
-    "packagePath": "com.mendix.widget.web",
     "scripts": {
-        "start": "pluggable-widgets-tools start:server",
-        "dev": "pluggable-widgets-tools start:web",
         "build": "pluggable-widgets-tools build:web",
-        "format": "prettier --write .",
-        "lint": "eslint src/",
-        "test": "pluggable-widgets-tools test:unit:web",
-        "release": " pluggable-widgets-tools release:web",
         "create-gh-release": "rui-create-gh-release",
         "create-translation": "rui-create-translation",
-        "publish-marketplace": "rui-publish-marketplace",
-        "verify": "rui-verify-package-format",
-        "update-changelog": "rui-update-changelog-widget",
+        "dev": "pluggable-widgets-tools start:web",
         "e2e": "run-e2e ci",
+        "e2e-update-project": "pnpm --filter data-widgets run build:include-deps",
         "e2edev": "run-e2e dev --with-preps",
-        "e2e-update-project": "pnpm --filter data-widgets run build:include-deps"
+        "format": "prettier --write .",
+        "lint": "eslint src/",
+        "publish-marketplace": "rui-publish-marketplace",
+        "release": " pluggable-widgets-tools release:web",
+        "start": "pluggable-widgets-tools start:server",
+        "test": "pluggable-widgets-tools test:unit:web",
+        "update-changelog": "rui-update-changelog-widget",
+        "verify": "rui-verify-package-format"
+    },
+    "dependencies": {
+        "classnames": "^2.3.2",
+        "markdown-it": "^14.1.0"
     },
     "devDependencies": {
-        "@mendix/widget-plugin-test-utils": "workspace:*",
         "@mendix/automation-utils": "workspace:*",
         "@mendix/eslint-config-web-widgets": "workspace:*",
         "@mendix/pluggable-widgets-tools": "*",
@@ -53,10 +56,7 @@
         "@mendix/run-e2e": "workspace:*",
         "@mendix/widget-plugin-hooks": "workspace:*",
         "@mendix/widget-plugin-platform": "workspace:*",
+        "@mendix/widget-plugin-test-utils": "workspace:*",
         "@types/markdown-it": "^14.1.1"
-    },
-    "dependencies": {
-        "classnames": "^2.3.2",
-        "markdown-it": "^14.1.0"
     }
 }
