--- a/automation/snapshot-generator/package.json
+++ b/automation/snapshot-generator/package.json
@@ -3,14 +3,11 @@
     "version": "1.1.0",
     "description": "Generate fake data snapshot in json",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
+    "license": "MIT",
     "main": "./lib/index.js",
     "files": [
         "lib"
     ],
-    "engines": {
-        "node": ">= 18.20.4"
-    },
-    "license": "MIT",
     "scripts": {
         "format": "prettier --write .",
         "lint": "eslint lib/ bin/"
@@ -19,8 +16,8 @@
         "chance": "^1.1.12"
     },
     "devDependencies": {
-        "globals": "^16.0.0",
         "@eslint/js": "^9.24.0",
-        "@mendix/prettier-config-web-widgets": "workspace:*"
+        "@mendix/prettier-config-web-widgets": "workspace:*",
+        "globals": "^16.0.0"
     }
 }
