--- a/packages/pluggableWidgets/accessibility-helper-web/package.json
+++ b/packages/pluggableWidgets/accessibility-helper-web/package.json
@@ -4,7 +4,7 @@
     "version": "2.2.1",
     "description": "Set an attribute to a DOM element",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
-    "author": "Widget Team",
+    "license": "Apache-2.0",
     "repository": {
         "type": "git",
         "url": "https://github.com/mendix/web-widgets.git"
@@ -15,6 +15,7 @@
         "type": "widget",
         "mpkName": "com.mendix.widget.web.AccessibilityHelper.mpk"
     },
+    "packagePath": "com.mendix.widget.web",
     "marketplace": {
         "minimumMXVersion": "9.6.0",
         "appNumber": 114803,
@@ -24,23 +25,21 @@
         "githubUrl": "https://github.com/mendix/testProjects",
         "branchName": "accessibility-helper-web"
     },
-    "packagePath": "com.mendix.widget.web",
     "scripts": {
-        "start": "pluggable-widgets-tools start:server",
-        "dev": "pluggable-widgets-tools start:ts",
         "build": "pluggable-widgets-tools build:ts",
-        "format": "prettier --write .",
-        "lint": "eslint src/",
-        "release": "pluggable-widgets-tools release:web",
         "create-gh-release": "rui-create-gh-release",
         "create-translation": "rui-create-translation",
-        "publish-marketplace": "rui-publish-marketplace",
-        "verify": "rui-verify-package-format",
-        "update-changelog": "rui-update-changelog-widget",
+        "dev": "pluggable-widgets-tools start:ts",
         "e2e": "run-e2e ci",
-        "e2edev": "run-e2e dev --with-preps"
+        "e2edev": "run-e2e dev --with-preps",
+        "format": "prettier --write .",
+        "lint": "eslint src/",
+        "publish-marketplace": "rui-publish-marketplace",
+        "release": "pluggable-widgets-tools release:web",
+        "start": "pluggable-widgets-tools start:server",
+        "update-changelog": "rui-update-changelog-widget",
+        "verify": "rui-verify-package-format"
     },
-    "license": "Apache-2.0",
     "devDependencies": {
         "@mendix/automation-utils": "workspace:*",
         "@mendix/eslint-config-web-widgets": "workspace:*",
