--- a/packages/pluggableWidgets/area-chart-web/package.json
+++ b/packages/pluggableWidgets/area-chart-web/package.json
@@ -16,6 +16,7 @@
         "type": "widget",
         "mpkName": "com.mendix.widget.web.AreaChart.mpk"
     },
+    "packagePath": "com.mendix.widget.web",
     "marketplace": {
         "minimumMXVersion": "9.6.0",
         "appName": "Area Chart"
@@ -24,18 +25,22 @@
         "githubUrl": "https://github.com/mendix/testProjects",
         "branchName": "area-chart-web"
     },
-    "packagePath": "com.mendix.widget.web",
     "scripts": {
-        "start": "pluggable-widgets-tools start:server",
-        "dev": "pluggable-widgets-tools start:web",
         "build": "pluggable-widgets-tools build:ts",
+        "create-translation": "rui-create-translation",
+        "dev": "pluggable-widgets-tools start:web",
         "format": "prettier --write .",
         "lint": "eslint src/",
-        "test": "pluggable-widgets-tools test:unit:web",
         "release": "pluggable-widgets-tools release:web",
-        "verify": "rui-verify-package-format",
+        "start": "pluggable-widgets-tools start:server",
+        "test": "pluggable-widgets-tools test:unit:web",
         "update-changelog": "rui-update-changelog-widget",
-        "create-translation": "rui-create-translation"
+        "verify": "rui-verify-package-format"
+    },
+    "dependencies": {
+        "@mendix/shared-charts": "workspace:*",
+        "classnames": "^2.3.2",
+        "plotly.js-dist-min": "^3.0.0"
     },
     "devDependencies": {
         "@mendix/automation-utils": "workspace:*",
@@ -44,10 +49,5 @@
         "@mendix/prettier-config-web-widgets": "workspace:*",
         "@mendix/widget-plugin-platform": "workspace:*",
         "@mendix/widget-plugin-test-utils": "workspace:*"
-    },
-    "dependencies": {
-        "@mendix/shared-charts": "workspace:*",
-        "classnames": "^2.3.2",
-        "plotly.js-dist-min": "^3.0.0"
     }
 }
