--- a/packages/pluggableWidgets/rich-text-web/package.json
+++ b/packages/pluggableWidgets/rich-text-web/package.json
@@ -4,66 +4,43 @@
     "version": "4.5.0",
     "description": "Rich inline or toolbar text editing",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
+    "license": "Apache-2.0",
     "repository": {
         "type": "git",
         "url": "https://github.com/mendix/web-widgets.git"
     },
-    "testProject": {
-        "githubUrl": "https://github.com/mendix/testProjects",
-        "branchName": "rich-text-v4-web"
-    },
-    "license": "Apache-2.0",
+    "config": {},
     "mxpackage": {
         "name": "RichText",
         "type": "widget",
         "mpkName": "RichText.mpk"
     },
+    "packagePath": "com.mendix.widget.custom",
     "marketplace": {
         "minimumMXVersion": "9.24.0",
         "appNumber": 74889,
         "appName": "Rich Text",
         "reactReady": true
     },
-    "packagePath": "com.mendix.widget.custom",
+    "testProject": {
+        "githubUrl": "https://github.com/mendix/testProjects",
+        "branchName": "rich-text-v4-web"
+    },
     "scripts": {
-        "start": "cross-env MPKOUTPUT=RichText.mpk pluggable-widgets-tools start:server",
-        "dev": "cross-env MPKOUTPUT=RichText.mpk pluggable-widgets-tools start:web",
         "build": "cross-env MPKOUTPUT=RichText.mpk pluggable-widgets-tools build:web",
-        "format": "prettier --write .",
-        "lint": "eslint src/",
-        "test": "jest --projects jest.config.js",
-        "release": "cross-env MPKOUTPUT=RichText.mpk pluggable-widgets-tools release:web",
         "create-gh-release": "rui-create-gh-release",
         "create-translation": "rui-create-translation",
-        "publish-marketplace": "rui-publish-marketplace",
-        "verify": "rui-verify-package-format",
-        "update-changelog": "rui-update-changelog-widget",
+        "dev": "cross-env MPKOUTPUT=RichText.mpk pluggable-widgets-tools start:web",
         "e2e": "run-e2e ci",
-        "e2edev": "run-e2e dev --with-preps"
-    },
-    "config": {},
-    "devDependencies": {
-        "@mendix/automation-utils": "workspace:*",
-        "@mendix/eslint-config-web-widgets": "workspace:*",
-        "@mendix/pluggable-widgets-tools": "*",
-        "@mendix/prettier-config-web-widgets": "workspace:*",
-        "@mendix/run-e2e": "workspace:*",
-        "@mendix/widget-plugin-component-kit": "workspace:*",
-        "@mendix/widget-plugin-platform": "workspace:*",
-        "@mendix/widget-plugin-test-utils": "workspace:*",
-        "@rollup/plugin-json": "^6.1.0",
-        "@rollup/plugin-alias": "^5.1.1",
-        "@rollup/plugin-image": "^3.0.3",
-        "@rollup/plugin-replace": "^6.0.2",
-        "@types/dompurify": "^2.4.0",
-        "@types/katex": "^0.16.7",
-        "@types/sanitize-html": "^1.27.2",
-        "cross-env": "^7.0.3",
-        "postcss": "^8.4.21",
-        "postcss-import": "^16.0.0",
-        "postcss-url": "^10.1.3",
-        "rollup-plugin-postcss": "^4.0.2",
-        "rollup-preserve-directives": "^1.1.1"
+        "e2edev": "run-e2e dev --with-preps",
+        "format": "prettier --write .",
+        "lint": "eslint src/",
+        "publish-marketplace": "rui-publish-marketplace",
+        "release": "cross-env MPKOUTPUT=RichText.mpk pluggable-widgets-tools release:web",
+        "start": "cross-env MPKOUTPUT=RichText.mpk pluggable-widgets-tools start:server",
+        "test": "jest --projects jest.config.js",
+        "update-changelog": "rui-update-changelog-widget",
+        "verify": "rui-verify-package-format"
     },
     "dependencies": {
         "@floating-ui/react": "^0.26.27",
@@ -74,5 +51,28 @@
         "parchment": "^3.0.0",
         "quill": "^2.0.2",
         "quill-resize-module": "^2.0.4"
+    },
+    "devDependencies": {
+        "@mendix/automation-utils": "workspace:*",
+        "@mendix/eslint-config-web-widgets": "workspace:*",
+        "@mendix/pluggable-widgets-tools": "*",
+        "@mendix/prettier-config-web-widgets": "workspace:*",
+        "@mendix/run-e2e": "workspace:*",
+        "@mendix/widget-plugin-component-kit": "workspace:*",
+        "@mendix/widget-plugin-platform": "workspace:*",
+        "@mendix/widget-plugin-test-utils": "workspace:*",
+        "@rollup/plugin-alias": "^5.1.1",
+        "@rollup/plugin-image": "^3.0.3",
+        "@rollup/plugin-json": "^6.1.0",
+        "@rollup/plugin-replace": "^6.0.2",
+        "@types/dompurify": "^2.4.0",
+        "@types/katex": "^0.16.7",
+        "@types/sanitize-html": "^1.27.2",
+        "cross-env": "^7.0.3",
+        "postcss": "^8.4.21",
+        "postcss-import": "^16.0.0",
+        "postcss-url": "^10.1.3",
+        "rollup-plugin-postcss": "^4.0.2",
+        "rollup-preserve-directives": "^1.1.1"
     }
 }
