--- a/packages/pluggableWidgets/slider-web/package.json
+++ b/packages/pluggableWidgets/slider-web/package.json
@@ -4,44 +4,49 @@
     "version": "2.1.4",
     "description": "Change a number value using a slider",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
+    "license": "Apache-2.0",
     "repository": {
         "type": "git",
         "url": "https://github.com/mendix/web-widgets.git"
     },
-    "testProject": {
-        "githubUrl": "https://github.com/mendix/testProjects",
-        "branchName": "slider-web"
-    },
-    "license": "Apache-2.0",
+    "config": {},
     "mxpackage": {
         "name": "Slider",
         "type": "widget",
         "mpkName": "Slider.mpk"
     },
+    "packagePath": "com.mendix.widget.custom",
     "marketplace": {
         "minimumMXVersion": "9.6.0",
         "appNumber": 48786,
         "appName": "Slider",
         "reactReady": true
     },
-    "packagePath": "com.mendix.widget.custom",
+    "testProject": {
+        "githubUrl": "https://github.com/mendix/testProjects",
+        "branchName": "slider-web"
+    },
     "scripts": {
-        "start": "cross-env MPKOUTPUT=Slider.mpk pluggable-widgets-tools start:server",
-        "dev": "cross-env MPKOUTPUT=Slider.mpk pluggable-widgets-tools start:web",
         "build": "cross-env MPKOUTPUT=Slider.mpk pluggable-widgets-tools build:web",
-        "format": "prettier --write .",
-        "lint": "eslint src/",
-        "test": "pluggable-widgets-tools test:unit:web",
-        "release": "cross-env MPKOUTPUT=Slider.mpk pluggable-widgets-tools release:web",
         "create-gh-release": "rui-create-gh-release",
         "create-translation": "rui-create-translation",
-        "publish-marketplace": "rui-publish-marketplace",
-        "verify": "rui-verify-package-format",
-        "update-changelog": "rui-update-changelog-widget",
+        "dev": "cross-env MPKOUTPUT=Slider.mpk pluggable-widgets-tools start:web",
         "e2e": "run-e2e ci",
-        "e2edev": "run-e2e dev --with-preps"
+        "e2edev": "run-e2e dev --with-preps",
+        "format": "prettier --write .",
+        "lint": "eslint src/",
+        "publish-marketplace": "rui-publish-marketplace",
+        "release": "cross-env MPKOUTPUT=Slider.mpk pluggable-widgets-tools release:web",
+        "start": "cross-env MPKOUTPUT=Slider.mpk pluggable-widgets-tools start:server",
+        "test": "pluggable-widgets-tools test:unit:web",
+        "update-changelog": "rui-update-changelog-widget",
+        "verify": "rui-verify-package-format"
     },
-    "config": {},
+    "dependencies": {
+        "classnames": "^2.3.2",
+        "rc-slider": "^8.7.1",
+        "rc-tooltip": "^3.7.3"
+    },
     "devDependencies": {
         "@mendix/automation-utils": "workspace:*",
         "@mendix/eslint-config-web-widgets": "workspace:*",
@@ -53,10 +58,5 @@
         "@types/rc-slider": "^8.6.6",
         "@types/rc-tooltip": "^3.7.7",
         "cross-env": "^7.0.3"
-    },
-    "dependencies": {
-        "classnames": "^2.3.2",
-        "rc-slider": "^8.7.1",
-        "rc-tooltip": "^3.7.3"
     }
 }
