--- a/packages/pluggableWidgets/video-player-web/package.json
+++ b/packages/pluggableWidgets/video-player-web/package.json
@@ -4,17 +4,18 @@
     "version": "3.2.2",
     "description": "Player for YouTube, Dailymotion, Vimeo and Mp4 videos",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
+    "license": "Apache-2.0",
     "repository": {
         "type": "git",
         "url": "https://github.com/mendix/web-widgets.git"
     },
-    "license": "Apache-2.0",
     "config": {},
     "mxpackage": {
         "name": "VideoPlayer",
         "type": "widget",
         "mpkName": "com.mendix.widget.web.VideoPlayer.mpk"
     },
+    "packagePath": "com.mendix.widget.web",
     "marketplace": {
         "minimumMXVersion": "9.6.0",
         "appNumber": 110700,
@@ -25,22 +26,26 @@
         "githubUrl": "https://github.com/mendix/testProjects",
         "branchName": "video-player-web"
     },
-    "packagePath": "com.mendix.widget.web",
     "scripts": {
-        "start": "pluggable-widgets-tools start:server",
-        "dev": "pluggable-widgets-tools start:web",
         "build": "pluggable-widgets-tools build:web",
-        "format": "prettier --write .",
-        "lint": "eslint src/",
-        "test": "pluggable-widgets-tools test:unit:web",
-        "release": "pluggable-widgets-tools release:web",
         "create-gh-release": "rui-create-gh-release",
         "create-translation": "rui-create-translation",
-        "publish-marketplace": "rui-publish-marketplace",
-        "verify": "rui-verify-package-format",
-        "update-changelog": "rui-update-changelog-widget",
+        "dev": "pluggable-widgets-tools start:web",
         "e2e": "run-e2e ci",
-        "e2edev": "run-e2e dev --with-preps"
+        "e2edev": "run-e2e dev --with-preps",
+        "format": "prettier --write .",
+        "lint": "eslint src/",
+        "publish-marketplace": "rui-publish-marketplace",
+        "release": "pluggable-widgets-tools release:web",
+        "start": "pluggable-widgets-tools start:server",
+        "test": "pluggable-widgets-tools test:unit:web",
+        "update-changelog": "rui-update-changelog-widget",
+        "verify": "rui-verify-package-format"
+    },
+    "dependencies": {
+        "@types/react-test-renderer": "^18.0.7",
+        "classnames": "^2.3.2",
+        "react-test-renderer": "^18.2.0"
     },
     "devDependencies": {
         "@mendix/automation-utils": "workspace:*",
@@ -50,10 +55,5 @@
         "@mendix/run-e2e": "workspace:*",
         "@mendix/widget-plugin-platform": "workspace:*",
         "@types/react-resize-detector": "^5.0.0"
-    },
-    "dependencies": {
-        "@types/react-test-renderer": "^18.0.7",
-        "classnames": "^2.3.2",
-        "react-test-renderer": "^18.2.0"
     }
 }
