--- a/packages/shared/eslint-config-web-widgets/package.json
+++ b/packages/shared/eslint-config-web-widgets/package.json
@@ -1,26 +1,26 @@
 {
     "name": "@mendix/eslint-config-web-widgets",
     "version": "1.0.0",
-    "private": true,
     "description": "eslint config for web widgets",
-    "main": "index.js",
-    "license": "Apache-2.0",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
+    "license": "Apache-2.0",
+    "private": true,
+    "main": "index.js",
     "scripts": {
-        "lint": "eslint .",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "lint": "eslint ."
     },
     "dependencies": {
-        "@mendix/prettier-config-web-widgets": "workspace:*",
-        "typescript-eslint": "^8.29.0",
         "@eslint/js": "^9.23.0",
-        "globals": "^16.0.0",
+        "@mendix/prettier-config-web-widgets": "workspace:*",
         "eslint": "^9.23.0",
         "eslint-plugin-cypress": "^4.2.0",
         "eslint-plugin-jest": "^28.11.0",
         "eslint-plugin-prettier": "^5.2.6",
         "eslint-plugin-promise": "^7.2.1",
         "eslint-plugin-react": "~7.37.5",
-        "eslint-plugin-react-hooks": "^5.2.0"
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "globals": "^16.0.0",
+        "typescript-eslint": "^8.29.0"
     }
 }
