--- a/packages/shared/prettier-config-web-widgets/package.json
+++ b/packages/shared/prettier-config-web-widgets/package.json
@@ -5,6 +5,7 @@
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
     "license": "Apache-2.0",
     "private": true,
+    "main": "index.js",
     "scripts": {
         "format": "prettier --write .",
         "lint": "eslint --ext .js ."
@@ -15,6 +16,5 @@
         "eslint": "^9.23.0",
         "globals": "^16.0.0",
         "prettier-plugin-packagejson": "^2.5.10"
-    },
-    "main": "index.js"
+    }
 }
