--- a/packages/shared/widget-plugin-hooks/package.json
+++ b/packages/shared/widget-plugin-hooks/package.json
@@ -2,13 +2,17 @@
     "name": "@mendix/widget-plugin-hooks",
     "version": "0.1.0",
     "description": "Hooks for the pluggable widgets.",
-    "license": "Apache-2.0",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
+    "license": "Apache-2.0",
     "repository": {
         "type": "git",
         "url": "https://github.com/mendix/web-widgets.git"
     },
     "type": "module",
+    "files": [
+        "dist",
+        "!*.map"
+    ],
     "exports": {
         "./*": "./dist/*.js"
     },
@@ -19,17 +23,13 @@
             ]
         }
     },
-    "files": [
-        "dist",
-        "!*.map"
-    ],
     "scripts": {
         "compile": "tsc",
+        "dev": "tsc --watch",
         "format": "prettier --write .",
         "lint": "eslint --ext .ts,.tsx ./src",
         "prepare": "tsc",
-        "test": "jest",
-        "dev": "tsc --watch"
+        "test": "jest"
     },
     "devDependencies": {
         "@mendix/eslint-config-web-widgets": "workspace:*",
