--- a/packages/shared/widget-plugin-sorting/package.json
+++ b/packages/shared/widget-plugin-sorting/package.json
@@ -2,13 +2,17 @@
     "name": "@mendix/widget-plugin-sorting",
     "version": "1.0.0",
     "description": "Sorting API plugin.",
-    "license": "Apache-2.0",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
+    "license": "Apache-2.0",
     "repository": {
         "type": "git",
         "url": "https://github.com/mendix/web-widgets.git"
     },
     "type": "module",
+    "files": [
+        "dist",
+        "!*.map"
+    ],
     "exports": {
         "./*": "./dist/*.js"
     },
@@ -19,24 +23,20 @@
             ]
         }
     },
-    "files": [
-        "dist",
-        "!*.map"
-    ],
     "scripts": {
         "compile": "tsc",
+        "dev": "tsc --watch",
         "format": "prettier --write .",
         "lint": "eslint --ext .ts,.tsx ./src",
-        "prepare": "tsc",
-        "dev": "tsc --watch"
+        "prepare": "tsc"
+    },
+    "dependencies": {
+        "mobx": "6.12.3",
+        "mobx-react-lite": "4.0.7"
     },
     "devDependencies": {
         "@mendix/eslint-config-web-widgets": "workspace:*",
         "@mendix/prettier-config-web-widgets": "workspace:*",
         "@mendix/tsconfig-web-widgets": "workspace:*"
-    },
-    "dependencies": {
-        "mobx": "6.12.3",
-        "mobx-react-lite": "4.0.7"
     }
 }
