--- a/packages/pluggableWidgets/badge-button-web/package.json
+++ b/packages/pluggableWidgets/badge-button-web/package.json
@@ -37,7 +37,7 @@
         "publish-marketplace": "rui-publish-marketplace",
         "release": "cross-env MPKOUTPUT=BadgeButton.mpk pluggable-widgets-tools release:web",
         "start": "cross-env MPKOUTPUT=BadgeButton.mpk pluggable-widgets-tools start:server",
-        "test": "pluggable-widgets-tools test:unit:web",
+        "test": "jest --projects jest.config.js",
         "update-changelog": "rui-update-changelog-widget",
         "verify": "rui-verify-package-format"
     },
