--- a/packages/shared/widget-plugin-external-events/package.json
+++ b/packages/shared/widget-plugin-external-events/package.json
@@ -27,7 +27,7 @@
         "build": "tsc -p tsconfig.build.json",
         "dev": "tsc -p tsconfig.build.json --watch",
         "format": "prettier --write .",
-        "lint": "eslint --ext .ts,.tsx ./src",
+        "lint": "eslint src/ package.json",
         "prepare": "pnpm build",
         "test": "jest"
     },
