--- a/packages/pluggableWidgets/bar-chart-web/package.json
+++ b/packages/pluggableWidgets/bar-chart-web/package.json
@@ -30,7 +30,7 @@
         "create-translation": "rui-create-translation",
         "dev": "pluggable-widgets-tools start:web",
         "format": "prettier --write .",
-        "lint": "eslint src/",
+        "lint": "eslint src/ package.json",
         "release": "pluggable-widgets-tools release:web",
         "start": "pluggable-widgets-tools start:server",
         "test": "pluggable-widgets-tools test:unit:web",
