--- a/packages/pluggableWidgets/barcode-scanner-web/package.json
+++ b/packages/pluggableWidgets/barcode-scanner-web/package.json
@@ -33,7 +33,7 @@
         "e2e": "echo \"Skipping barcode-scanner-web e2e tests\"",
         "e2edev": "run-e2e dev --with-preps",
         "format": "prettier --write .",
-        "lint": "eslint src/",
+        "lint": "eslint src/ package.json",
         "publish-marketplace": "rui-publish-marketplace",
         "release": "pluggable-widgets-tools release:web",
         "start": "pluggable-widgets-tools start:server",
