--- a/packages/pluggableWidgets/heatmap-chart-web/package.json
+++ b/packages/pluggableWidgets/heatmap-chart-web/package.json
@@ -32,7 +32,7 @@
         "e2e": "run-e2e ci",
         "e2edev": "run-e2e dev --with-preps",
         "format": "prettier --write .",
-        "lint": "eslint src/",
+        "lint": "eslint src/ package.json",
         "release": "pluggable-widgets-tools release:web",
         "start": "pluggable-widgets-tools start:server",
         "test": "pluggable-widgets-tools test:unit:web",
