--- a/packages/pluggableWidgets/selection-helper-web/package.json
+++ b/packages/pluggableWidgets/selection-helper-web/package.json
@@ -30,7 +30,7 @@
         "create-translation": "rui-create-translation",
         "dev": "pluggable-widgets-tools start:web",
         "format": "prettier --write .",
-        "lint": "eslint src/",
+        "lint": "eslint src/ package.json",
         "release": "pluggable-widgets-tools release:ts",
         "start": "pluggable-widgets-tools start:server",
         "update-changelog": "rui-update-changelog-widget",
