--- a/packages/pluggableWidgets/tooltip-web/package.json
+++ b/packages/pluggableWidgets/tooltip-web/package.json
@@ -34,7 +34,7 @@
         "e2e": "run-e2e ci",
         "e2edev": "run-e2e dev --with-preps",
         "format": "prettier --write .",
-        "lint": "eslint src/",
+        "lint": "eslint src/ package.json",
         "publish-marketplace": "rui-publish-marketplace",
         "release": " pluggable-widgets-tools release:web",
         "start": "pluggable-widgets-tools start:server",
