--- a/packages/shared/eslint-config-web-widgets/package.json
+++ b/packages/shared/eslint-config-web-widgets/package.json
@@ -8,7 +8,7 @@
     "main": "index.js",
     "scripts": {
         "format": "prettier --write .",
-        "lint": "eslint ."
+        "lint": "eslint . package.json"
     },
     "dependencies": {
         "@eslint/js": "^9.23.0",
@@ -16,6 +16,7 @@
         "eslint": "^9.23.0",
         "eslint-plugin-cypress": "^4.2.0",
         "eslint-plugin-jest": "^28.11.0",
+        "eslint-plugin-package-json": "^0.29.0",
         "eslint-plugin-prettier": "^5.2.6",
         "eslint-plugin-promise": "^7.2.1",
         "eslint-plugin-react": "~7.37.5",
