--- a/packages/shared/prettier-config-web-widgets/package.json
+++ b/packages/shared/prettier-config-web-widgets/package.json
@@ -8,7 +8,7 @@
     "main": "index.js",
     "scripts": {
         "format": "prettier --write .",
-        "lint": "eslint --ext .js ."
+        "lint": "eslint . package.json"
     },
     "dependencies": {
         "@eslint/js": "^9.23.0",
