--- a/packages/shared/widget-plugin-platform/package.json
+++ b/packages/shared/widget-plugin-platform/package.json
@@ -27,7 +27,7 @@
         "compile": "tsc",
         "dev": "tsc --watch",
         "format": "prettier --write .",
-        "lint": "eslint --ext .ts,.tsx ./src",
+        "lint": "eslint src/ package.json",
         "prepare": "tsc",
         "test": "jest"
     },
