chore: update signature

--- a/packages/customWidgets/signature-web/package.json
+++ b/packages/customWidgets/signature-web/package.json
@@ -38,7 +38,7 @@
     "dependencies": {
         "classnames": "^2.3.2",
         "react-resize-detector": "^9.1.1",
-        "signature_pad": "https://github.com/Andries-Smit/signature_pad/releases/download/v3.0.0-beta.4/signature_pad.tar.gz"
+        "signature_pad": "4.0.0"
     },
     "devDependencies": {
         "@mendix/automation-utils": "workspace:*",
