--- a/packages/pluggableWidgets/document-viewer-web/package.json
+++ b/packages/pluggableWidgets/document-viewer-web/package.json
@@ -35,6 +35,7 @@
     },
     "dependencies": {
         "classnames": "^2.3.2",
+        "mammoth": "github:uicontent/mammoth",
         "pdfjs-dist": "^5.0.375",
         "react-pdf": "^9.2.1"
     },
